modified notebook with a few runs (5 epochs)

--- a/ig_en_mt/scripts_notebooks/2. Transformer MT Model for Igbo-English.ipynb
+++ b/ig_en_mt/scripts_notebooks/2. Transformer MT Model for Igbo-English.ipynb
@@ -1514,10 +1514,10 @@
       "metadata": {
         "id": "Hd3234ZRpi72",
         "colab_type": "code",
-        "outputId": "8c59a5f9-2d0f-439c-d12a-8136736c4653",
+        "outputId": "2f7d0107-6483-4bec-803b-cc769b4d1302",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 145
+          "height": 308
         }
       },
       "source": [
@@ -1559,7 +1559,16 @@
             "\t Val. Loss: 2.842 |  Val. PPL:  17.143\n",
             "Epoch: 02 | Time: 16m 31s\n",
             "\tTrain Loss: 2.759 | Train PPL:  15.783\n",
-            "\t Val. Loss: 2.389 |  Val. PPL:  10.900\n"
+            "\t Val. Loss: 2.389 |  Val. PPL:  10.900\n",
+            "Epoch: 03 | Time: 16m 34s\n",
+            "\tTrain Loss: 2.381 | Train PPL:  10.814\n",
+            "\t Val. Loss: 2.200 |  Val. PPL:   9.024\n",
+            "Epoch: 04 | Time: 16m 33s\n",
+            "\tTrain Loss: 2.169 | Train PPL:   8.746\n",
+            "\t Val. Loss: 2.096 |  Val. PPL:   8.133\n",
+            "Epoch: 05 | Time: 16m 33s\n",
+            "\tTrain Loss: 2.029 | Train PPL:   7.606\n",
+            "\t Val. Loss: 2.049 |  Val. PPL:   7.763\n"
           ],
           "name": "stdout"
         }
