modified notebook title

--- a/training_igbo_bert.ipynb
+++ b/training_igbo_bert.ipynb
@@ -35,7 +35,7 @@
         "id": "b8y9VYzYvrrh"
       },
       "source": [
-        "# **How to train ibo language model from scratch using Transformers and Tokenizers**"
+        "# **Training Igbo BERT Language Model from Scratch**"
       ]
     },
     {
